--- a/Survey-Form/style.css
+++ b/Survey-Form/style.css
@@ -13,7 +13,7 @@ body {
   form{
     width:60vw;
     margin:0 auto;
-    padding-bottom: 8px;
+    padding: 8px 0;
     background-color:rgba(0,0,128,1);
     color:#ffffff;
     display: flex;
